--- a/templates/Restrictions/poddescription.html.twig
+++ b/templates/Restrictions/poddescription.html.twig
@@ -2,8 +2,8 @@
     @file
     Partial template for rendering a description for pods.
 #}
-<p>Some restricted cards are so powerful that their inclusion in a deck comes with
-    additional deckbuilding restrictions.
-    If a player selects one of these cards as their restricted card
-    (shown in <strong>bold text</strong> below), they may not include any of the
-    cards listed following them.</p>
+<p>Some cards interactions are so powerful that the inclusion of these cards in a deck comes with
+    additional restrictions. Those cards are grouped together in pods.</p>
+<p>No more than one card from each pod may be included in a deck.</p>
+<p>However, if a pod contains a card from the restricted list (indicated in <strong>bold text</strong> if applicable),
+    then no cards from that pod other than this restricted card may be included in a deck.</p>
