clarifies pod definition.

--- a/templates/Restrictions/poddescription.html.twig
+++ b/templates/Restrictions/poddescription.html.twig
@@ -5,5 +5,7 @@
 <p>Some cards interactions are so powerful that the inclusion of these cards in a deck comes with
     additional restrictions. Those cards are grouped together in pods.</p>
 <p>No more than one card from each pod may be included in a deck.</p>
-<p>However, if a pod contains a card from the restricted list (indicated in <strong>bold text</strong> if applicable),
-    then no cards from that pod other than this restricted card may be included in a deck.</p>
+<p>However, if a pod contains a card from the restricted list (indicated in <strong>bold text</strong> if applicable)
+    and you choose that card as your restricted card, then the other cards from that pod cannot
+    be included in your deck. If you choose a different restricted card, you may include any number of
+    unrestricted cards from that pod in your deck.</p>
