--- a/templates/Builder/deckedit.html.twig
+++ b/templates/Builder/deckedit.html.twig
@@ -38,6 +38,11 @@
                     <input type="hidden" name="description">
                     <input type="hidden" name="faction_code" value="{{ deck.faction.code }}">
                     <input type="hidden" name="tags">
+                    <div id="deck-options">
+                        <div class="form-group">
+                            <div id="restricted_lists"></div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="name">{{ 'decks.edit.form.name' | trans }}</label>
                         <input type="text" class="form-control decklist-name" name="name" value="{{ deck.name }}">
