adds rl selector to deck view page.

--- a/templates/Builder/deckview.html.twig
+++ b/templates/Builder/deckview.html.twig
@@ -26,7 +26,15 @@
         <div class="row">
 
             <!-- Left-side Column -->
-            <div class="col-md-6" id="deck">
+            <div class="col-md-6">
+                <div id="deck" class="deck-loading">
+                    <i class="fas fa-spinner fa-spin fa-5x"></i>
+                </div>
+                <div id="deck-options">
+                    <div class="form-group">
+                        <div id="restricted_lists"></div>
+                    </div>
+                </div>
             </div><!-- /#deck -->
             <!-- Left-side Column -->
 
