wires RL page up to main navigation.
get rid of obsolete translation while at it.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,9 @@
                                 <li><a href="{{ path('rulesreference') }}">{{ 'nav.rulesreference' | trans }}</a></li>
                                 <li><a href="{{ path('faq') }}">{{ 'nav.faq' | trans }}</a></li>
                                 <li>
+                                    <a href="{{ path('restrictions') }}">{{ 'nav.restrictions' | trans }}</a>
+                                </li>
+                                <li>
                                     <a href="{{ path('tournamentregulations') }}">{{ 'nav.tournamentregulations' | trans }}</a>
                                 </li>
                             </ul>
