--- a/templates/Decklist/decklist_edit.html.twig
+++ b/templates/Decklist/decklist_edit.html.twig
@@ -49,6 +49,11 @@
             </div>
             <div class="col-sm-3">
                 <div id="decklist" class="small"></div>
+                <div id="deck-options">
+                    <div class="form-group">
+                        <div id="restricted_lists"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
