adds rl selectors to deckimport page.

--- a/templates/Builder/directimport.html.twig
+++ b/templates/Builder/directimport.html.twig
@@ -38,6 +38,9 @@
                         <ul class="list-group" id="deck">
                         </ul>
                     </div>
+                    <div class="form-group">
+                         <div id="restricted_lists"></div>
+                    </div>
                     <input type="hidden" name="faction_code">
                     <input type="hidden" name="content">
                     <button id="btn-save" type="submit" class="btn btn-success">Save the deck</button>
