adds shutdown notice to landing page.

--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -3,6 +3,13 @@
 
 {% block body %}
     <div class="main container">
+        <div class="alert alert-warning text-center" role="alert" >
+            <strong>Achtung!</strong> This site will go offline permanently on March 1st, 2021.
+            Please migrate your contents to <a href="https://thronesdb.com/" target="_blank">thronesdb.com</a>.<br>
+            See <a href="https://agot.cards/2021/01/12/thronesdb-updates-for-january-2021/?1234" target="_blank">
+                https://agot.cards/2021/01/12/thronesdb-updates-for-january-2021/
+            </a> for more information.
+        </div>
 
         {% include 'alerts.html.twig' %}
         <h1 class="site-title hidden-xs">Thr<span style="position:relative">o<span class="icon icon-power"
