indicate WIP in card search results.

--- a/templates/Search/display-card.html.twig
+++ b/templates/Search/display-card.html.twig
@@ -13,7 +13,7 @@
 
 {% block main %}
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-12">
             <div class="row">
                 {% for card in cards %}
                     <div class="col-sm-7" style="margin-bottom:2em">
@@ -25,6 +25,7 @@
                                     </h3>
                                 </div>
                                 <div class="panel-body card-content">
+                                    {% include 'Search/card-work-in-progress.html.twig' %}
                                     {% include 'Search/card-faction.html.twig' %}
                                     {% include 'Search/card-info.html.twig' %}
                                     {% include 'Search/card-text.html.twig' %}
