--- a/templates/Search/display-spoiler.html.twig
+++ b/templates/Search/display-spoiler.html.twig
@@ -15,6 +15,7 @@
                             <div class="faction-icon">
                                 <span class="icon-{{ card.faction_code }} fg-{{ card.faction_code }}"></span>
                             </div>
+                            {% include 'Search/card-work-in-progress.html.twig' %}
                             {% include 'Search/card-faction.html.twig' %}
                             {% include 'Search/card-info.html.twig' %}
                             {% include 'Search/card-text.html.twig' %}
