fixes rendering of pods in template.

--- a/templates/Restrictions/podlist.html.twig
+++ b/templates/Restrictions/podlist.html.twig
@@ -5,7 +5,7 @@
     Available variables:
     - pods: a list of pods
 #}
-{% for pod in list.joustRestrictedPods %}
+{% for pod in pods %}
     <div class="pod">
         <div class="title text-center"> Pod {{ pod.title }}</div>
         <div class="cards">
