--- a/templates/Default/rulesreference.en.html.twig
+++ b/templates/Default/rulesreference.en.html.twig
@@ -140,6 +140,14 @@
 
     <p><strong>Related:</strong> <a href="#Keywords">Keywords</a>, <a href="#Put_into_Play">Put into Play</a></p>
 
+    <h3 id="Assault">Assault</h3>
+
+    <p>Assault is a keyword ability. When a player initiates a challenge and 1 or more characters with assault are
+        declared as attackers, that player may choose one location controlled by the defending player with a printed
+        cost lower than the highest printed cost among attacking characters with assault.
+        Treat the chosen location as if its printed text box were blank (except for Traits) until the end of the
+        challenge. If you win this challenge, kneel it.</p>
+
     <h3 id="Attachment_Cards">Attachment Cards</h3>
 
     <p>Attachment cards represent weapons, armor, items, skills, conditions, and titles. These cards enter play standing
@@ -951,8 +959,8 @@
             gaining the same keyword from multiple sources functions as if it has one instance of that keyword. (Note:
             Instances of Ambush (X) with different values for X are considered different keywords.)
         </li>
-        <li> The keywords in the game are: ambush (X), bestow (X), insight, intimidate, limited, no attachments,
-            pillage, renown, shadow (X), stealth, and terminal.
+        <li> The keywords in the game are: ambush (X), assault, bestow (X), insight, intimidate, limited,
+            no attachments, pillage, renown, shadow (X), stealth, and terminal.
         </li>
     </ul>
 
