--- a/templates/Builder/deckview.html.twig
+++ b/templates/Builder/deckview.html.twig
@@ -64,6 +64,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li class="dropdown-header"><span
                                             class="fas fa-file-export"></span> {{ 'forms.export' | trans }}</li>
+                                <li><a id="btn-export-theironthrone" href="#">{{ 'decks.form.export.theironthrone' | trans }}</a>
                                 <li><a id="btn-export-plaintext"
                                        href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
                                 <li><a id="btn-export-markdown" href="#">{{ 'decks.form.export.markdown' | trans }}</a>
