--- a/templates/Decklist/toolbar.html.twig
+++ b/templates/Decklist/toolbar.html.twig
@@ -14,10 +14,10 @@
     </button>
     <ul class="dropdown-menu" role="menu">
         <li class="dropdown-header"><span class="fas fa-file-export"></span> {{ 'forms.export' | trans }}</li>
-        <li><a id="btn-export-theironthrone" href="#">{{ 'decks.form.export.theironthrone' | trans }}</a></li>
         <li><a id="btn-export-plaintext" href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
         <li><a id="btn-export-markdown" href="#">{{ 'decks.form.export.markdown' | trans }}</a></li>
         <li><a id="btn-export-agotcards" href="#">{{ 'decks.form.export.agotcards' | trans }}</a></li>
+        <li><a id="btn-export-plotsanddrawdeckonly" href="#">{{ 'decks.form.export.plotsanddrawdeckonly' | trans }}</a></li>
         <li class="dropdown-header"><span class="fas fa-file-download"></span> {{ 'forms.download' | trans }}</li>
         <li><a href="#" id="btn-download-text">{{ 'decks.form.download.text' | trans }}</a></li>
         <li><a href="#" id="btn-download-text-cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
