only show active RLs on restrictions page.

--- a/templates/Restrictions/index.html.twig
+++ b/templates/Restrictions/index.html.twig
@@ -3,8 +3,7 @@
     Page template for displaying all restricted lists (RL).
 
     Available variables:
-    - active_lists: a list of active RLs
-    - inactive_lists: a list of inactive RLs
+    - restrictions: a list of active RLs
     - pagetitle: The page title
     - pagedescription: The page description
 #}
@@ -16,22 +15,12 @@
 
         <div class="row">
             <div class="col-md-12 restrictions-container">
-                {% if active_lists|length %}
+                {% if restrictions|length %}
                     <div class="active-restrictions">
                         <h1>Active Restricted Lists</h1>
                         <p>The following lists of card restrictions are supported in the deck builder.</p>
-                        {% for list in active_lists %}
+                        {% for list in restrictions %}
                             {% include 'Restrictions/restrictedlist.html.twig' with {'list': list} %}
-                        {% endfor %}
-                    </div>
-                {% endif %}
-                {% if inactive_lists|length %}
-                    <div class="inactive-restrictions">
-                        <h1>Inactive Restricted Lists</h1>
-                        <p>The following lists of card restrictions are <em>not supported</em> in
-                           the deck builder and are listed here for reference only.</p>
-                        {% for list in inactive_lists %}
-                            {% include 'Restrictions/restrictedlist.html.twig' with {'list': list } %}
                         {% endfor %}
                     </div>
                 {% endif %}
