--- a/templates/Builder/deck-charts.html.twig
+++ b/templates/Builder/deck-charts.html.twig
@@ -11,6 +11,11 @@
         <div id="deck-chart-strength" style="width:100%;height:250px"></div>
     </div>
     <div class="col-sm-6">
+        <div id="deck-chart-character-cost" style="width:100%;height:250px"></div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6">
         <div id="deck-chart-cost" style="width:100%;height:250px"></div>
     </div>
 </div>
