Link to external doc for RL, if applicable.

--- a/templates/Restrictions/restrictedlist.html.twig
+++ b/templates/Restrictions/restrictedlist.html.twig
@@ -14,34 +14,42 @@
     <p>
         Issued by {{ list.issuer }}, effective on {{ list.effectiveOn | date("m/d/Y")}}.
     </p>
-    {%if list.joustRestrictedList | length %}
-        <h3>Joust Restricted List</h3>
-        {% include 'Restrictions/restricteddescription.html.twig' %}
-        {% include 'Restrictions/cardlist.html.twig' with {'list': list.joustRestrictedList} %}
+    {%if list.joustUrl %}
+        <h3><a href="{{list.joustUrl}}" target="_blank">Joust Restricted List <i class="fas fa-external-link-alt"></i></a></h3>
+    {% else %}
+        {%if list.joustRestrictedList | length %}
+            <h3>Joust Restricted List</h3>
+            {% include 'Restrictions/restricteddescription.html.twig' %}
+            {% include 'Restrictions/cardlist.html.twig' with {'list': list.joustRestrictedList} %}
+        {% endif %}
+        {%if list.joustRestrictedPods | length %}
+            <h3>Joust Restricted Pods</h3>
+            {% include 'Restrictions/poddescription.html.twig' %}
+            {% include 'Restrictions/podlist.html.twig' with {'pods': list.joustRestrictedPods} %}
+        {% endif %}
+        {%if list.joustBannedList | length %}
+            <h3>Joust Banned List</h3>
+            <p>The following cards are not legal for competitive play in Joust.</p>
+            {% include 'Restrictions/cardlist.html.twig' with {'list': list.joustBannedList} %}
+        {% endif %}
     {% endif %}
-    {%if list.joustRestrictedPods | length %}
-        <h3>Joust Restricted Pods</h3>
-        {% include 'Restrictions/poddescription.html.twig' %}
-        {% include 'Restrictions/podlist.html.twig' with {'pods': list.joustRestrictedPods} %}
-    {% endif %}
-    {%if list.joustBannedList | length %}
-        <h3>Joust Banned List</h3>
-        <p>The following cards are not legal for competitive play in Joust.</p>
-        {% include 'Restrictions/cardlist.html.twig' with {'list': list.joustBannedList} %}
-    {% endif %}
-    {%if list.meleeRestrictedList | length %}
-        <h3>Melee Restricted List</h3>
-        {% include 'Restrictions/restricteddescription.html.twig' %}
-        {% include 'Restrictions/cardlist.html.twig' with {'list': list.meleeRestrictedList} %}
-    {% endif %}
-    {%if list.meleeRestrictedPods | length %}
-        <h3>Melee Restricted Pods</h3>
-        {% include 'Restrictions/poddescription.html.twig' %}
-        {% include 'Restrictions/podlist.html.twig' with {'pods': list.meleeRestrictedPods} %}
-    {% endif %}
-    {%if list.meleeBannedList | length %}
-        <h3>Melee Banned List</h3>
-        <p>The following cards are not legal for competitive play in Melee.</p>
-        {% include 'Restrictions/cardlist.html.twig' with {'list': list.meleeBannedList} %}
+    {%if list.meleeUrl %}
+        <h3><a href="{{list.meleeUrl}}" target="_blank">Melee Restricted List <i class="fas fa-external-link-alt"></i></a></h3>
+    {% else %}
+        {%if list.meleeRestrictedList | length %}
+            <h3>Melee Restricted List</h3>
+            {% include 'Restrictions/restricteddescription.html.twig' %}
+            {% include 'Restrictions/cardlist.html.twig' with {'list': list.meleeRestrictedList} %}
+        {% endif %}
+        {%if list.meleeRestrictedPods | length %}
+            <h3>Melee Restricted Pods</h3>
+            {% include 'Restrictions/poddescription.html.twig' %}
+            {% include 'Restrictions/podlist.html.twig' with {'pods': list.meleeRestrictedPods} %}
+        {% endif %}
+        {%if list.meleeBannedList | length %}
+            <h3>Melee Banned List</h3>
+            <p>The following cards are not legal for competitive play in Melee.</p>
+            {% include 'Restrictions/cardlist.html.twig' with {'list': list.meleeBannedList} %}
+        {% endif %}
     {% endif %}
 </div>
