--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,6 +536,10 @@ article.review .review-comment {
     .icon.fg-baratheon::after {
         content: "(Baratheon)";
     }
+
+    #deck-content .deck-content {
+        column-count:2;
+    }
 }
 
 /*************** DECK(LIST) COMPARE *****************/
