--- a/templates/footer.en.html.twig
+++ b/templates/footer.en.html.twig
@@ -1,5 +1,5 @@
 <div class="row" style="margin-bottom:2em">
-    <div class="col-xs-12">
+    <div class="col-md-12">
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">About</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
