--- a/templates/footer.es.html.twig
+++ b/templates/footer.es.html.twig
@@ -1,5 +1,5 @@
 <div class="row" style="margin-bottom:2em">
-    <div class="col-xs-12">
+    <div class="col-md-12">
 
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">Sobre este sitio</a></li>
