--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -10,7 +10,7 @@
   font-display: block;
 }
 
-.icon {
+[class^="icon-"], [class*=" icon-"], .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'thronesdb' !important;
   speak: never;
