--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,12 +588,21 @@ abbr.legality.banned {
     padding-right: 9px;
 }
 
-/*** FAQ, Rules Reference, Tournament Regulations pages ******/
+/*** Rules Reference, Tournament Regulations pages ******/
 #rules ul.rl-pod-list {
     margin-bottom: 0;
 }
 
 #rules div.example {
+    padding-left: 3em;
+}
+
+/* FAQ */
+#faq .new {
+    color: #ee0000;
+}
+
+#faq div.example {
     padding-left: 3em;
 }
 
