--- a/templates/Default/faq.html.twig
+++ b/templates/Default/faq.html.twig
@@ -112,7 +112,7 @@
                     <strong>
                         (v2.1)
                         <a href="{{ path('cards_zoom', { card_code: "04111" }) }}">Esgred</a>
-                        <em>(War of the Five Rings, 111)</em>
+                        <em>(War of the Five Kings, 111)</em>
                     </strong>
                     <br>
                     Should read: &quot;If you control Asha Greyjoy, sacrifice Esgred.
